[package]
name = "server-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.87"
borsh = "0.9.3"
bincode = "2.0.0-rc.1"
rand = "0.8.5"
env_logger = "0.9.0"
tungstenite = "0.17.3"